# podium-ia-poc-llm-evaluate

./: README.md  claude_test.py  escrow_questions.csv  escrow_questions_with_citations.csv  escrow_questions_with_citations.txt  langchain_rag_to_mlflow_LOG_AzureOpenAI_CallAid.py  langchain_rag_to_mlflow_LOG_BedRock_CallAid.py  pyproject.toml  requirements.txt  streamlit_DEV_NEW.py  streamlit_app_BedRock_DEV.py  streamlit_app_BedRock_LangChain_DEV.py  streamlit_app_Boto_Client_DEV.py  streamlit_app_DEV.py  streamlit_app_DEV_CITATIONS.py  streamlit_app_TEMPLATE.py  streamlit_llm_answers.csv  streamlit_llm_evaluate_answers.csv
call_aids_data/: Escrow (Call Center) Job Aid.docx  Escrow Tax (Call Center).docx
